# screenshot-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
crawler/: config.py  crawler_tasks.py  model.py  object_store.py  package.py  process.py
